--- a/css/style.css
+++ b/css/style.css
@@ -1208,6 +1208,9 @@ main {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
+.error__field {
+  border-color: red;
+}
 .error__inner,
 .success__inner {
   position: relative;
